2025-07-25: [RELEASE] v0.33.0 release - compatible with qtile 0.33.0
2025-07-21: [BREAKING CHNAGE] More changes to `CurrentLayout` in qtile so you need latest
                              git version of qtile to be installed.
2025-07-12: [BREAKING CHANGE] Qtile has removed `CurrentLayoutIcon` as it is now part of
                              `CurrentLayout`. qtile-extras has been updated to match.
2025-06-15: [FEATURE] Add `Tetris` widget
2025-06-10: [RELEASE] v0.32.0 release - compatible with qtile 0.32.0
2025-06-08: [FEATURE] Add `Pong` widget
2025-06-01: [FEATURE] Add `Snake` widget
2025-03-22: [BUGFIX] Fix `IWD` widget crashing when `padding` is `None`
2025-03-21: [BUGFIX] Check for existing dbus service name for `SnapCast` widget
2025-03-20: [BUGFIX] Better handling of connection errors for `SnapCast` widget
2025-03-08: [FEATURE] Add ability to switch streams/groups in `SnapCast` widget
2025-03-07: [RELEASE] v0.31.0 release - compatible with qtile 0.31.0
2025-03-07: [FEATURE] Add Mpris2 support to `SnapCast` widget
2025-02-22: [FEATURE] Add ability to stroke `PowerLineDecoration` shape 
2025-01-07: [RELEASE] v0.30.0 release - compatible with qtile 0.30.0
2025-01-02: [FEATURE] More methods for generating `PopupMenu` objects
2024-12-26: [BUGFIX] Fix control highlight border in popup toolkit
2024-12-23: [FEATURE] Add ability to mask icons in `StatusNotifier` widget
2024-12-11: [BREAKING CHANGE] `dbus-next` dependency has been replaced with `dbus-fast`. Update to latest qtile is also required.
2024-11-18: [BUGFIX] Fix square border for `AnalogueClock`
2024-11-14: [FEATURE] Enable support for vertical bars for `GroupBox2`
2024-11-03: [FEATURE] Add `ImageDecoration` for widgets
2024-10-19: [RELEASE] v0.29.0 release - compatible with qtile 0.29.0
2024-08-23: [FEATURE] Add `GradientDecoration` for widgets
2024-08-13: [RELEASE] v0.28.1 release - compatible with qtile 0.28.1
2024-08-11: [RELEASE] v0.28.0 release - compatible with qtile 0.28.0