@@ -1,3 +1,4 @@
+2025-07-27: [BREAKING CHANGE] Drop support for python < 3.12 (following same change in qtile)
 2025-07-25: [RELEASE] v0.33.0 release - compatible with qtile 0.33.0
 2025-07-21: [BREAKING CHNAGE] More changes to `CurrentLayout` in qtile so you need latest
                               git version of qtile to be installed.
